fix homePage align

--- a/week-4/static/style.css
+++ b/week-4/static/style.css
@@ -11,4 +11,6 @@
     text-align: center;
     padding-top: 100px;
 }
-
+input {
+    float: right;
+}
